--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "request-promise": "4.1.1",
     "enumify": "1.0.4",
-    "base-64": "0.1.0",
-    "utf8": "2.1.2"
+    "immutable": "3.8.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
