--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "request-promise": "4.1.1",
     "enumify": "1.0.4",
-    "immutable": "3.8.1"
+    "immutable": "3.8.1",
+    "dotenv": "2.0.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
