--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "2.0.0",
     "enumify": "1.0.4",
     "immutable": "3.8.1",
+    "request": "^2.79.0",
     "request-promise": "4.1.1"
   },
   "devDependencies": {
