--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
   "name": "uber-client",
-  "version": "0.0.2",
   "description": "Client for the Uber API",
-  "scripts": {
-    "test": "npm run build && mocha --compilers js:babel-core/register",
-    "coverage": "babel-node ./node_modules/istanbul/lib/cli cover node_modules/.bin/_mocha -- --compilers js:babel-register ",
-    "coveralls": "npm run compile && npm run-script coverage && node_modules/.bin/coveralls < coverage/lcov.info",
-    "build": "babel src --presets babel-preset-es2015 --out-dir build",
-    "prepublish": "npm run compile",
-    "compile": "babel --presets es2015,stage-0 -d build/ src/"
-  },
+  "version": "0.0.3",
   "author": "Jae Bradley",
-  "license": "MIT",
-  "preferGlobal": false,
-  "main": "./build/index.js",
   "dependencies": {
-    "dotenv": "2.0.0",
     "enumify": "1.0.4",
     "immutable": "3.8.1",
     "request": "^2.79.0",
     "request-promise": "4.1.1"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "chai-immutable": "1.6.0",
-    "mocha": "2.4.5",
-    "coveralls": "2.11.9",
-    "mocha-lcov-reporter": "1.2.0 ",
-    "istanbul": "1.0.0-alpha.2",
-    "babel-core": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-node-debug": "2.0.0",
     "babel-cli": "6.7.7",
+    "babel-core": "6.8.0",
+    "babel-istanbul": "0.8.0",
+    "babel-node-debug": "2.0.0",
+    "babel-polyfill": "6.8.0",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.8.0",
-    "babel-polyfill": "6.8.0",
-    "babel-istanbul": "0.8.0"
+    "chai": "3.5.0",
+    "chai-immutable": "1.6.0",
+    "coveralls": "2.11.9",
+    "dotenv": "2.0.0",
+    "istanbul": "1.0.0-alpha.2",
+    "mocha": "2.4.5",
+    "mocha-lcov-reporter": "1.2.0 "
   },
   "directories": {
     "lib": "build",
     "test": "test"
   },
+  "license": "MIT",
+  "main": "./build/index.js",
+  "preferGlobal": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/jaebradley/uber-client/tree/master"
+  },
+  "scripts": {
+    "build": "babel src --presets babel-preset-es2015 --out-dir build",
+    "compile": "babel --presets es2015,stage-0 -d build/ src/",
+    "coverage": "babel-node ./node_modules/istanbul/lib/cli cover node_modules/.bin/_mocha -- --compilers js:babel-register ",
+    "coveralls": "npm run compile && npm run-script coverage && node_modules/.bin/coveralls < coverage/lcov.info",
+    "prepublish": "npm run compile",
+    "test": "npm run build && mocha --compilers js:babel-core/register"
   }
 }
