--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,29 @@
 {
-  "presets": ["es2015", "stage-0"]
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          { "modules": "umd" }
+        ]
+      ],
+      "plugins": [
+        "@babel/transform-runtime",
+        "@babel/transform-async-to-generator",
+        "@babel/plugin-transform-modules-commonjs"
+      ]
+    },
+    "production": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          { "modules": false }
+        ]
+      ]
+    }
+  },
+  "ignore": [
+    "node_modules/**",
+    "*.test.js"
+  ]
 }
